--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -1,18 +1,12 @@
-.listcategory {
+.updated {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1000px;
   margin: 50px auto;
-  padding: 0 20px;
+  padding: 10px 20px;
   font-size: 2rem;
-}
-
-#category {
-  font-size: 2rem;
-  font-weight: 700;
-  color: #1e1e1e;
-  margin: 20px 0;
-  padding: 10px;
+  background-color: white;
+  color: black;
+  border: 0.5px solid rgb(206, 192, 192);
 }
