--- a/src/styles/Addbook.css
+++ b/src/styles/Addbook.css
@@ -2,10 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
-  max-width: 85%;
-  margin: 0 250px;
-  padding: 0 20px;
+  width: 95%;
+
+  /* max-width: 85%; */
+
+  /* margin: 0 250px; */
+
+  /* padding: 0 20px; */
+  border-top: 4px solid rgba(128, 128, 128, 0.511);
 }
 
 .addbook-title {
@@ -25,11 +29,13 @@
   margin: 10px 10px;
 }
 
-input {
+input,
+.categorry {
   padding: 20px;
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  width: 600px;
+  width: 500px;
+  margin-right: 10px;
 }
