--- a/src/styles/Booklist.css
+++ b/src/styles/Booklist.css
@@ -1,11 +1,3 @@
-.books {
-  background-color: #fafafa;
-  margin: 0;
-  width: 100%;
-  height: 80vh;
-  top: 0;
-}
-
 .book {
   display: flex;
   justify-content: space-between;
@@ -27,13 +19,18 @@
 .booklist-item {
   display: flex;
   justify-content: space-between;
-  padding: 40px;
+  padding: 20px 30px;
   background-color: #fff;
-  border: 0.5px solid rgb(206, 192, 192);
-  margin: 10px 0;
+  border: 0.5px solid rgba(210, 207, 207, 0.879);
+  margin: 30px 0;
+}
+
+.bookdetails {
+  width: 700px;
 }
 
 .booklist-item li {
+  align-items: center;
   list-style: none;
   margin: 0 10px;
   display: flex;
@@ -44,26 +41,38 @@
   font-size: 1.2rem;
   font-weight: 700;
   color: #929292;
+  margin-bottom: 10px;
 }
 
 .title {
   font-size: 1.5rem;
   font-weight: 700;
   color: #1e1e1e;
+  margin-bottom: 10px;
 }
 
 .author {
   font-size: 1.2rem;
   font-weight: 700;
-  color: #176fbc;
+  color: #307bbe;
+  margin-bottom: 10px;
 }
 
 .interact {
+  float: left;
   display: flex;
   justify-content: space-between;
   margin: 10px 0;
-  color: #176fbc;
+  color: #307bbe;
   font-size: 1.2rem;
+}
+
+.remove {
+  background-color: #fff;
+  border: none;
+  color: #307bbe;
+  font-size: 1.2rem;
+  padding: 0;
 }
 
 .vr {
@@ -77,44 +86,26 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  gap: 40px;
 }
 
-/* make the progress-bar round */
 .progress-bar {
-  position: relative;
+  width: 5.625rem;
+  height: 5.625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.63rem 2.925rem 0.75rem 2.925rem;
 }
 
 .progress-bar-outer {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  padding: 20px;
-}
-
-.progress-bar-inner {
-  display: flex;
-  align-items: center;
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  justify-content: center;
-}
-
-circle {
-  fill: none;
-  stroke: #055ac2;
-  stroke-width: 8px;
-  stroke-dasharray: 202;
-  stroke-dashoffset: 20;
-  transition: 2s linear;
-}
-
-svg {
   position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
+  width: 4.25rem;
+  height: 4.25rem;
+  transform: rotate(45deg);
+  border-radius: 50%;
+  border: 5px solid;
+  border-color: rgb(48, 123, 190) rgb(48, 123, 190) rgb(48, 123, 190) rgb(232, 232, 232);
+  border-image: initial;
 }
 
 .progress-percentage {
@@ -125,8 +116,8 @@ svg {
 
 .progress-percentage span {
   font-size: 1.2rem;
-  font-weight: 700;
-  color: #413d3d;
+  font-weight: 400;
+  color: #413d3d86;
 }
 
 .vrr {
