--- a/src/styles/Books.css
+++ b/src/styles/Books.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  max-width: 1820px;
+  width: 90%;
+  max-width: 1720px;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   padding: 0 35px 40px;
-  background-color: #fafafa;
+  background-color: #2f2d2d;
+  border-radius: 20px;
 }
 
 .BOOKS {
